--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">Pertenezco a la Sede de Santa Cruz de la Sierra</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Dirección Regional de Post-Grado</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Diplomado: Desarrollo de Software</a>
                     </div>
                 </div>
             </div>
